--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "styled-elements",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "files": [
+    "/lib"
+  ],
   "scripts": {
-    "build": "babel src/index.js",
+    "build": "babel src/index.js -o lib/index.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -12,6 +14,7 @@
   "author": "Lewis Robinson",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-jest": "^25.4.0",
