scope package name to avoid conflicts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "styled-elements",
+  "name": "@lewisvrobinson/styled-elements",
   "version": "1.0.0",
   "description": "",
   "files": [
